fix: horizontal scroll fixed

--- a/minimum-boilerplate-theme/styles/css/header/vtex.minicart.css
+++ b/minimum-boilerplate-theme/styles/css/header/vtex.minicart.css
@@ -5,7 +5,7 @@
 }
 
 .minicartWrapperContainer {
-    width: 44px;
+    width: 40px;
 }
 
 .openIconContainer {
